--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "dependencies": {
     "@heroui/input": "2.4.28",
     "@heroui/kbd": "2.2.22",
+    "@heroui/link": "^2.2.23",
     "@heroui/navbar": "2.2.25",
+    "@heroui/switch": "^2.2.24",
     "@heroui/system": "2.4.23",
+    "@heroui/theme": "^2.4.23",
     "@react-aria/ssr": "3.9.10",
     "@react-aria/visually-hidden": "3.8.28",
     "clsx": "2.1.1",
     "framer-motion": "11.18.2",
     "intl-messageformat": "10.7.16",
     "next": "15.3.1",
+    "next-auth": "^4.24.11",
     "next-themes": "0.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1"
