--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "next-auth": "^4.24.11",
     "next-themes": "0.4.6",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "15.3.4",
