--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint --fix"
   },
   "dependencies": {
+    "@heroui/button": "^2.2.27",
+    "@heroui/form": "^2.1.27",
     "@heroui/input": "2.4.28",
     "@heroui/kbd": "2.2.22",
     "@heroui/link": "^2.2.23",
@@ -16,6 +18,7 @@
     "@heroui/switch": "^2.2.24",
     "@heroui/system": "2.4.23",
     "@heroui/theme": "^2.4.23",
+    "@heroui/toast": "^2.0.17",
     "@react-aria/ssr": "3.9.10",
     "@react-aria/visually-hidden": "3.8.28",
     "clsx": "2.1.1",
