--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint --fix"
   },
   "dependencies": {
+    "@heroui/avatar": "^2.2.22",
     "@heroui/button": "^2.2.27",
+    "@heroui/card": "^2.2.25",
     "@heroui/form": "^2.1.27",
     "@heroui/input": "2.4.28",
     "@heroui/kbd": "2.2.22",
@@ -29,7 +31,8 @@
     "next-themes": "0.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "swr": "^2.3.6"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "15.3.4",
