--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroui/input": "2.4.28",
     "@heroui/kbd": "2.2.22",
     "@heroui/link": "^2.2.23",
+    "@heroui/modal": "^2.2.24",
     "@heroui/navbar": "2.2.25",
     "@heroui/switch": "^2.2.24",
     "@heroui/system": "2.4.23",
