--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "15.4.7",
     "next-auth": "^4.24.11",
     "next-themes": "0.4.6",
+    "postgres": "^3.4.7",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "sqlite3": "^5.1.7",
