--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "postgres": "^3.4.7",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "sqlite3": "^5.1.7",
     "swr": "^2.3.6"
   },
   "devDependencies": {
@@ -45,7 +44,7 @@
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "8.34.1",
     "@typescript-eslint/parser": "8.34.1",
-    "eslint": "9.25.1",
+    "eslint": "^9.38.0",
     "eslint-config-next": "15.3.4",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.31.0",
