--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint --fix"
   },
   "dependencies": {
+    "@eslint/compat": "^1.4.1",
     "@heroui/avatar": "^2.2.22",
     "@heroui/button": "^2.2.27",
     "@heroui/card": "^2.2.25",
