--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@heroui/link": "^2.2.23",
     "@heroui/listbox": "^2.3.26",
     "@heroui/modal": "^2.2.24",
+    "@heroui/select": "^2.4.28",
     "@heroui/switch": "^2.2.24",
     "@heroui/system": "2.4.23",
     "@heroui/theme": "^2.4.23",
